; ModuleID = '/home/carl/AnghaBench/php-src/sapi/embed/extr_php_embed.c_php_embed_startup.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/embed/extr_php_embed.c_php_embed_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAILURE = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @php_embed_startup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_embed_startup(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @php_module_startup(i32* %4, i32* null, i32 0)
  %6 = load i64, i64* @FAILURE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i64, i64* @FAILURE, align 8
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @SUCCESS, align 4
  store i32 %12, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i64 @php_module_startup(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
